fix: link overflow

--- a/assets/css/tiptap-theme.css
+++ b/assets/css/tiptap-theme.css
@@ -10,4 +10,5 @@
   color: var(--primary);
   text-decoration: underline;
   text-underline-offset: 4px;
+  line-break: anywhere;
 }
